# psychoanalyze

./: .gitignore  CONTRIBUTING.md  README.md  data-contract.odcs.yaml  flake.nix  mkdocs.yml  package-lock.json  package.json  prek.toml  psychoanalyze.code-workspace  pyproject.toml
.cursor/commands/: commit.md  describe-all.md  scope-app.md
.devcontainer/: devcontainer.json
.github/: AGENTS.md  copilot-instructions.md
.github/agents/: jj-parallel-splitter.agent.md  tdd-cycle.agent.md  tdd-green.agent.md  tdd-red.agent.md  tdd-refactor.agent.md
.github/docs/: tdd-enforcement-strategy.md  tdd-splitting-quick-reference.md
.github/instructions/: gherkin-feature.instructions.md  jj-revision-splitting.instructions.md  marimo-notebooks.instructions.md  prefer-mcp-tools.instructions.md  python.instructions.md
.github/prompts/: gherkin-scenario.prompt.md  jj-new-revision-from-d2.prompt.md  jj-split-revision.prompt.md  tdd-red-next-test.prompt.md
.github/skills/jj-tdd-revisions/: SKILL.md
.github/workflows/: ci.yaml  ci.yml
.pixi/: config.toml
docs/: agent-orchestration.md  architecture.md  full_model.d2  full_model.md  genjax-bytewax-panel-xs-zombie-plan.md  github-issues-labeling-plan.md  plan.d2  psychometric-function.d2  svmc.md  threshold-vs-time.d2
docs/architecture-diagrams/: architecture.d2  bayes-analysis.d2  bayesian-workflow.d2  index.md  plan-engineeringApproach.md  plan.d2  psychometric-function.d2  strength-duration.d2  testing-pyramid.d2  weber-curves.d2
docs/dashboard/: index.md
docs/specs/: data-pipeline.feature  gelman-workflow.feature  index.md
docs/technical-reference/: advanced-analysis.md  agent-orchestration.md  allure-dashboard.md  architecture.md  hierarchical-modeling.md  index.md
nbs/: app.py  batch.py  scratch.py  simulate.py
scripts/: jj-dev-overlay.nu
scripts/plan/: emit_from_jj.nu  render_d2.nu  watch_all_d2.nu
src/psychoanalyze/: __init__.py  params.py  plot.py  plot_schemas.py  psi.py  sigmoids.py  simulate.py  types.py
src/psychoanalyze/analysis/: bayes.py  bayesian.py  ecdf.py  strength_duration.py  weber.py
src/psychoanalyze/data/: __init__.py  blocks.py  logistic.py  points.py  sessions.py  subjects.py
tests/: test_features.py
tests/bdd-features/: conftest.py
tests/bdd-features/features/: dashboard_input.feature  dashboard_simulation_caching.feature  output_blocks_filtering.feature  output_downloads.feature  simulation.feature  visualization_psychometric.feature
tests/bdd-features/step-definitions/: test_simulation_steps.py
tests/features/: dashboard-input.feature  dashboard-output.feature  dashboard-visualization.feature  data-generation-simulation.feature  psychometric-function.feature  strength-duration.feature  weber-analysis.feature
tools/: test-colorizer.py
tools/pyramid-watcher/: go.mod  go.sum  main.go
